--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,17 +21,18 @@
     <div class="heading">
         <h1>Crud Operation</h1>
     </div>
-    <div class="PostUser">
-        <h1>Name</h1>
-        <input type="text" id="name"  class="input" placeholder="Enter Your Name"> <br /><br />
-        <h1>Email</h1>
-        <input type="text" id="email" class="input" placeholder="Enter Your Email"> <br /><br />
+     <form action="" method="post">
+   <div class="PostUser">
+    <h1>Name</h1>
+    <input type="text" id="name"  class="input" placeholder="Enter Your Name"> <br /><br />
+    <h1>Email</h1>
+    <input type="text" id="email" class="input" placeholder="Enter Your Email"> <br /><br />
 
-        <h1>Address</h1>
-        <input type="text" id="address" class="input" placeholder="Enter Your Address"> <br /><br />
-        <button onclick="createNote()"  class="btn"> Submit</button> <br /><br /><br /><br />
-        <!-- <button onclick="createNote()" class="btn"> Update User</button> -->
-    </div>
+    <h1>Address</h1>
+    <input type="text" id="address" class="input" placeholder="Enter Your Address"> <br /><br />
+    <button onclick="createNote()"  class="btn"> Submit</button> <br /><br /><br /><br />
+    <!-- <button onclick="createNote()" class="btn"> Update User</button> -->
+</div></form>
 
     <!-- Table -->
     <!-- Here a loader is created which 
