--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -21,8 +21,7 @@
     <div class="heading">
         <h1>Crud Operation</h1>
     </div>
-     <form action="" method="post">
-   <div class="PostUser">
+    <div class="PostUser">
     <h1>Name</h1>
     <input type="text" id="name"  class="input" placeholder="Enter Your Name"> <br /><br />
     <h1>Email</h1>
@@ -32,7 +31,7 @@
     <input type="text" id="address" class="input" placeholder="Enter Your Address"> <br /><br />
     <button onclick="createNote()"  class="btn"> Submit</button> <br /><br /><br /><br />
     <!-- <button onclick="createNote()" class="btn"> Update User</button> -->
-</div></form>
+</div>
 
     <!-- Table -->
     <!-- Here a loader is created which 
